tock-studio/ingress/eks/tock-studio.ing.yaml
# https://docs.aws.amazon.com/fr_fr/eks/latest/userguide/alb-ingress.html
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tock-studio
  annotations:
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - host: tock-studio
      http:
        paths:
          - path: /
            backend:
              service:
                name: bot-admin-svc
                port:
                  number: 8080
